# rdedup

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  HACKING.md  LICENSE-CFSLv0.md  LICENSE.md  Makefile  README.md  README.tpl  flake.nix  rustfmt.toml  shell.nix
.github/workflows/: ci.yml
docs/examples/: regular-backups-with-rbup.md  regular-backups-with-rdup.md
lib/: .rustfmt.toml  Cargo.toml  Makefile  README.md  rustfmt.toml
lib/src/: asyncio.rs  chunk_processor.rs  chunk_writer.rs  chunking.rs  compression.rs  config.rs  encryption.rs  error.rs  file_writer.rs  generation.rs  hashing.rs  iterators.rs  lib.rs  misc.rs  name.rs  pwhash.rs  reading.rs  settings.rs  sg.rs  sg_tests.rs  sorting_recv.rs  tests.rs  timestat.rs  util.rs
lib/src/aio/: b2.rs  backend.rs  local.rs  mod.rs
lib/src/config/: chunking.rs  compression.rs  encryption.rs  mod.rs  name.rs  version.rs
lib/src/util/: crypto.rs  mod.rs  readerveciter.rs  serde.rs  whileok.rs
scripts/: check-fmt.sh  e2e-common.sh  e2e-test-full.sh  e2e-test.sh  install-sodium.sh
sgdata/: Cargo.toml  README.md  rusty-tags.vi
sgdata/src/: lib.rs
src/: bin.rs  lib.rs  util.rs
tester/: Cargo.toml  README.md
tester/src/: bin.rs
