[package]
name = "rdedup-lib"
version = "3.0.0-0.1.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Data deduplication with compression and public key encryption. - library"
keywords = ["data", "backup", "dedupliation", "encryption", "dedup"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/rdedup-lib/"
homepage = "https://github.com/dpc/rdedup"
repository = "https://github.com/dpc/rdedup"
readme = "README.md"

[lib]
name = "rdedup_lib"
path = "src/lib.rs"

[features]
# Optional compression features
with-bzip2 = ["bzip2"]
with-deflate = ["flate2"]
with-xz2 = ["rust-lzma"]
with-zstd = ["zstd"]

[dependencies]
rdedup-cdc = "0.1.0"
sodiumoxide = { version = "0.0.15", features = ["serde"] }
fs2 = "0.4"
serde = "0.9"
serde_derive = "0.9"
serde_yaml = "0.6"
base64 = "0.4.0"
owning_ref = "0.3.3"
two-lock-queue = "0.1.0"
num_cpus = "1.2.1"
crossbeam = "0.2.10"
slog = "2.0.10"
slog-perf = "0.2"
hex = "0.2"
sgdata = { version = "0.1.0", path = "../sgdata" }
rand = "0.3.14"
dangerous_option = "0.2"
walkdir = "1.0.7"
sha2 = "0.6"
blake2 = "0.6"
digest = "0.6"
bytevec = "0.2"
chrono = { version = "0.4", features = ["serde"] }
url = "*"
backblaze-b2 = "*"
hyper = "*"
hyper-native-tls = "*"
serde_json = "*"

bzip2 = { version = "0.3.2", optional = true }
flate2 = { version = "0.2", optional = true }
rust-lzma = { version = "0.2", optional = true }
zstd = { version = "0.4.14", optional = true}
