[package]
name = "rdedup-lib"
version = "3.1.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Data deduplication with compression and public key encryption. - library"
keywords = ["data", "backup", "dedupliation", "encryption", "dedup"]
license = "MPL-2.0"
documentation = "https://docs.rs/rdedup-lib/"
homepage = "https://github.com/dpc/rdedup"
repository = "https://github.com/dpc/rdedup"
readme = "README.md"

[lib]
name = "rdedup_lib"
path = "src/lib.rs"

[features]
default = ["with-bzip2","with-deflate","with-xz2","with-zstd"]
# Optional compression features
with-bzip2 = ["bzip2"]
with-deflate = ["flate2"]
with-xz2 = ["rust-lzma"]
with-zstd = ["zstd"]

[dependencies]
rdedup-cdc = "0.1.0"
sodiumoxide = { version = "0.2", features = ["serde"] }
fs2 = "0.4"
serde = "1"
serde_derive = "1"
serde_yaml = "0.7"
base64 = "0.12.3"
owning_ref = "0.3.3"
num_cpus = "1.2.1"
crossbeam = "0.7"
crossbeam-channel = "0.4"
slog = "2.0.10"
slog-perf = "0.2"
hex = "0.3"
sgdata = { version = "0.1.0", path = "../sgdata" }
rand = "0.5"
dangerous_option = "0.2"
walkdir = "2"
sha2 = "0.7"
blake2 = "0.9.0"
digest = "0.7"
bytevec = "0.2"
chrono = { version = "0.4", features = ["serde"] }
url = "1"
backblaze-b2 = "0.1"
hyper = "0.10"
hyper-native-tls = "0.3"
serde_json = "1"

bzip2 = { version = "0.3.2", optional = true }
flate2 = { version = "1", optional = true }
rust-lzma = { version = "0.2", optional = true }
zstd = { version = "0.4.14", optional = true}
