[package]
name = "rdedup-lib"
version = "3.2.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Data deduplication with compression and public key encryption. - library"
keywords = ["data", "backup", "dedupliation", "encryption", "dedup"]
license = "MPL-2.0"
documentation = "https://docs.rs/rdedup-lib/"
homepage = "https://github.com/dpc/rdedup"
repository = "https://github.com/dpc/rdedup"
readme = "README.md"
edition = "2021"

[lib]
name = "rdedup_lib"
path = "src/lib.rs"

[features]
default = ["with-bzip2", "with-deflate", "with-xz2", "with-zstd", "backend-b2"]
# Optional compression features
with-bzip2 = ["bzip2"]
with-deflate = ["flate2"]
with-xz2 = ["rust-lzma"]
with-zstd = ["zstd"]
# Optional backends
backend-b2 = ["backblaze-b2", "hyper", "hyper-native-tls"]

[dependencies]
rdedup-cdc = "0.1.0"
sodiumoxide = { version = "0.2", features = ["serde"] }
fs2 = "0.4"
serde = { version = "1", features=["derive"] }
serde_yaml = "0.9.9"
base64 = "0.13.0"
owning_ref = "0.4.1"
num_cpus = "1.2.1"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.2"
slog = "2.0.10"
slog-perf = "0.2"
hex = "0.4.2"
sgdata = { version = "0.2.0", path = "../sgdata" }
rand = "0.8.5"
dangerous_option = "0.2"
walkdir = "2"
sha2 = "0.10.2"
blake2 = "0.10.4"
digest = "0.10.3"
bytevec = "0.2"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
backblaze-b2 = { version = "0.1", optional = true }
hyper = { version = "0.10", optional = true }
hyper-native-tls = { version = "0.3", optional = true }
serde_json = "1"

bzip2 = { version = "0.4.1", optional = true }
flate2 = { version = "1", optional = true }
rust-lzma = { version = "0.5.1", optional = true }
zstd = { version = "0.11.2", optional = true }
