[package]
name = "sgdata"
version = "0.1.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Scattered, gathered, immutable, arc-ed data"
keywords = ["data", "backup", "dedupliation", "encryption", "dedup"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/rdedup-lib/"
homepage = "https://github.com/dpc/rdedup"
repository = "https://github.com/dpc/rdedup"
readme = "README.md"
edition = "2018"

[dependencies]
owning_ref = "0.4.1"
