[package]
name = "tester"
version = "0.0.1"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Rdedup testing tool"
keywords = ["data", "backup", "dedupliation", "encryption", "dedup"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/rdedup-lib/"
homepage = "https://github.com/dpc/rdedup"
repository = "https://github.com/dpc/rdedup"
readme = "README.md"

[[bin]]
name = "tester"
path = "src/bin.rs"


[dependencies]
rand = "0.7.3"
sha2 = "0.9.1"
digest = "0.9.0"
hex = "0.4.2"
